--- a/port.css
+++ b/port.css
@@ -17,7 +17,7 @@ body {
 #header {
     width: 100%;
     height: 100vh;
-    background-image: url("photos/background.jpg");
+    background-image: url("Portfolio/background.jpg");
     background-size: cover;
     background-position: center;
 
@@ -372,7 +372,7 @@ form button {
 /*------------------------------css for small screens----------------*/
 @media only screen and (max-width: 600px) {
     #header {
-        background-image: url("photos/b2.jpg");
+        background-image: url("Portfolio/b2.jpg");
     }
 
     .header-text {
